--- a/src/app/shared/article-helpers/article-list.component.html
+++ b/src/app/shared/article-helpers/article-list.component.html
@@ -1,6 +1,6 @@
 <app-article-preview
   *ngFor="let article of results"
-  [article]="article">
+  [article]="article" [selectedUser]="selectedUser">
 </app-article-preview>
 
 <div class="app-article-preview"
