--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,12 +6,15 @@
       <p>A place to share your <i>Angular 2</i> knowledge.</p>
     </div>
   </div>
-
   <div class="container page">
     <div class="row">
-
-      <div class="col-md-9">
-        <div class="feed-toggle">
+      <div class="col-sm-3">
+      <compeat (userSelectedEvent)="userSelected($event)"></compeat>
+      </div>
+    </div> 
+    <div class="row">
+      <div class="col-md-9">               
+        <div class="feed-toggle">          
           <ul class="nav nav-pills outline-active">
             <li class="nav-item">
               <a class="nav-link"
@@ -35,7 +38,7 @@
           </ul>
         </div>
 
-        <app-article-list [limit]="10" [config]="listConfig"></app-article-list>
+        <app-article-list [limit]="10" [config]="listConfig" [selectedUser]="selectedUser"></app-article-list>
       </div>
 
       <div class="col-md-3">
