--- a/src/app/shared/article-helpers/article-preview.component.html
+++ b/src/app/shared/article-helpers/article-preview.component.html
@@ -1,5 +1,5 @@
 <div class="article-preview">
-  <app-article-meta [article]="article">
+  <app-article-meta [article]="article" [selectedUser]="selectedUser">
     <app-favorite-button
       [article]="article"
       (toggle)="onToggleFavorite($event)"
