--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -29,6 +29,14 @@
         </a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link"
+          routerLink="/compeat-page"
+          routerLinkActive="active">
+          Compeat
+        </a>
+      </li>
+
     </ul>
 
     <!-- Show this for logged in users -->
