--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <h1>{{ article.title }}</h1>
 
-      <app-article-meta [article]="article">
+      <app-article-meta [article]="article", [selectedUser]="test5">
 
           <span [hidden]="!canModify">
           <a class="btn btn-sm btn-outline-secondary"
