--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
 <div class="home-page">
-
+    <app-compeat-page (messageEvent)="receiveMessage($event)"></app-compeat-page>
   <div class="banner" *appShowAuthed="false">
     <div class="container">
       <h1 class="logo-font">conduit</h1>
       <p>A place to share your <i>Angular 2</i> knowledge.</p>
+
     </div>
   </div>
 
@@ -24,7 +25,7 @@
               <a class="nav-link"
                  [ngClass]="{'active': listConfig.type === 'all' && !listConfig.filters.tag}"
                  (click)="setListTo('all')">
-                 Global Feed
+                 Global Feed f
               </a>
             </li>
             <li class="nav-item" [hidden]="!listConfig.filters.tag">
@@ -35,7 +36,7 @@
           </ul>
         </div>
 
-        <app-article-list [limit]="10" [config]="listConfig"></app-article-list>
+        <app-article-list [limit]="10" [config]="listConfig" [selectedUser]="userSelected"></app-article-list>
       </div>
 
       <div class="col-md-3">
