--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" routerLink="/">conduit</a>
 
@@ -26,6 +26,12 @@
           routerLink="/register"
           routerLinkActive="active">
           Sign up
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+          routerLink="/compeat">
+          Compeat
         </a>
       </li>
 
@@ -73,3 +79,6 @@
 
   </div>
 </nav>
+
+
+
